Your update message here

--- a/board.html
+++ b/board.html
@@ -32,22 +32,22 @@
     <h1>URCC BOARD OFFICERS</h1>
     <div class="board-grid">
       <div class="member-card">
-        <img src="assets/profile_pres.jpg" alt="Efren Jacob Centillas">
+        <img src="assets/profile_pres.jpg">
         <h4>MOTOLAAG</h4>
         <p>President</p>
       </div>
       <div class="member-card">
-        <img src="assets/profile_migo.jpg" alt="Alex Dela Cruz">
+        <img src="assets/profile_migo.jpg">
         <h4>MICHAEL MIGO</h4>
         <p>Road Captain</p>
       </div>
       <div class="member-card">
-        <img src="assets/profile_maryel.jpg" alt="Maria Santos">
-        <h4>MARIEL</h4>
+        <img src="assets/profile_maryel.jpg">
+        <h4>MARIEL SOLIVA</h4>
         <p>Tail Gunner</p>
       </div>
       <div class="member-card">
-        <img src="assets/profile_photographer.jpg" alt="John Reyes">
+        <img src="assets/profile_photographer.jpg">
         <h4>HENRY NERIZON</h4>
         <p>Official Photographer</p>
       </div>
